--- a/P01/P01.md
+++ b/P01/P01.md
@@ -8,25 +8,32 @@ import random
 
 def anzeigen(stapel):
     """Zeigt den aktuellen Streichholzstapel an"""
-    print("\n" + "\n".join(["========O"] * stapel))
-    print(f"| Noch {stapel} Streichhölzer. |\n")
-
+    for i in range(stapel):
+        print("========O")
+    print("| Noch", stapel, "Streichhölzer. |")
+    print("\n")
+    
 def spieler_zug(stapel):
     """Lässt den Spieler eine gültige Anzahl nehmen"""
     while True:
         try:
             zug = int(input("Wie viele nimmst du? (1-3): "))
-            if 1 <= zug <= 3 and zug < stapel:
-                return zug
+            if zug >= 1 and zug <= 3:
+                if zug < stapel:
+                    return zug
             print("Ungültig! Wähle 1, 2 oder 3, aber nicht das letzte.")
         except ValueError:
             print("Gib eine Zahl (1-3) ein.")
 
 def computer_zug(stapel):
     """Computerspielzug basierend auf optimaler Strategie"""
-    if stapel in [2, 3]:
-        return stapel - 1  
-    return stapel % 4 or random.choice([1, 2, 3])
+    if stapel == 2 or stapel == 3:
+        return stapel - 1
+    else:
+        if stapel % 4 == 0:
+            return random.choice([1, 2, 3])
+        else:
+            return stapel % 4
 
 def spiel():
     """Startet das Spiel"""
@@ -37,14 +44,30 @@ def spiel():
 
     while stapel > 1:
         anzeigen(stapel)
-        zug = spieler_zug(stapel) if spieler_dran else computer_zug(stapel)
-        print(f"{'Du' if spieler_dran else 'Computer'} nimmst {zug}.")
-        stapel -= zug
-        spieler_dran = not spieler_dran
+        if spieler_dran:
+            zug = spieler_zug(stapel)
+        else:
+            zug = computer_zug(stapel)
+
+        if spieler_dran:
+            print("Du nimmst", zug)
+        else:
+            print("Computer nimmt", zug)
+
+        stapel = stapel - zug
+        if spieler_dran:
+            spieler_dran = False
+        else:
+            spieler_dran = True
 
     anzeigen(stapel)
-    print("Du verlierst!" if spieler_dran else "Computer verliert! Du gewinnst!")
+
+    if spieler_dran:
+        print("Du verlierst!")
+    else:
+        print("Computer verliert! Du gewinnst!")
 
 spiel()
+
 
 ```
