make the code explanation shorter and more relevant

--- a/P01/P01.md
+++ b/P01/P01.md
@@ -74,6 +74,6 @@ spiel()
 
 ### Code Erläuterung
 
-Das Programm startet ein Spiel mit einer zufälligen Anzahl Streichhölzer zwischen 10 und 20. In jeder Runde zeigt die Funktion anzeigen die noch vorhandenen Streichhölzer an. Danach zieht entweder der Mensch (spieler_zug) oder der Computer (computer_zug) 1 bis 3 Hölzer nach bestimmten Regeln. Wer gezwungen wird, das letzte Streichholz zu nehmen, verliert. Mit spiel() wird das Ganze gestartet, und am Schluss wird ausgegeben, wer verloren oder gewonnen hat.
+#### Computer Gewinnchancen
 
-Die Idee dahinter ist, den Streichholzstapel nach Möglichkeit auf ein Vielfaches von 4 zu bringen. Solange der Computer das schaffen kann, zwingt er den Spieler langfristig in die Lage, das letzte Streichholz zu ziehen. Mit stapel % 4 wird überprüft, wie viele Streichhölzer zu nehmen sind, um die Stapelgrösse nach dem eigenen Zug auf ein Vielfaches von 4 zu senken. So erhöht der Computer seine Gewinnchancen.
+Die Idee dahinter ist, den Streichholzstapel nach Möglichkeit auf ein Vielfaches von 4 zu bringen. Mit stapel % 4 wird überprüft, wie viele Streichhölzer zu nehmen sind, um die Stapelgrösse nach dem eigenen Zug auf ein Vielfaches von 4 zu senken. So erhöht der Computer seine Gewinnchancen.
