simplified code + md

--- a/P02/P02.md
+++ b/P02/P02.md
@@ -1,54 +1,80 @@
-# Banking System Simulation - OOP Implementation
+# Banking System Simulation
 
-## Overview
-This project implements a banking system using Object-Oriented Programming principles to demonstrate inheritance, encapsulation, and class relationships. The system simulates different types of bank accounts with specialized behaviors, a management application, and reporting functionality.
+This project implements a simple banking system with different account types and a simulation to demonstrate key features.
 
-## Class Structure
-### Core Classes
-- **BankAccount**: Base class that implements fundamental banking operations
-- **SavingAccount**: Extension with special interest rates and overdraft capabilities
-- **YouthAccount**: Extension with age restrictions and withdrawal limits
-- **BankApplication**: Manager class that handles multiple accounts and user interactions
-- **TaxReport**: Utility class for generating financial reports
+## Bank Application
 
-## OOP Principles Demonstrated
-### Inheritance
-- SavingAccount and YouthAccount extend the base BankAccount class
-- Each subclass inherits core functionality while adding specialized behavior
-- Method overriding is used to customize withdraw behavior in each account type
+The BankApplication class manages accounts and provides banking operations:
 
-### Encapsulation
-- Private attributes (using double underscores) protect internal state
-- Public methods provide controlled access to functionality
-- Each class manages its own data integrity
+```python
+class BankApplication:
+    def __init__(self):
+        self.accounts = {}
+        self.current_account = None
+        
+    def authenticate(self, username, password):
+        # Authenticates a user
+        
+    def open_account(self, account_type, identifier, age=None):
+        # Creates and stores a new account
+        
+    def deposit(self, amount):
+        # Deposits money to selected account
+        
+    def withdraw(self, amount):
+        # Withdraws money from selected account
+```
 
-### Abstraction
-- Complex operations like interest calculation are hidden behind simple method calls
-- Simulation code interacts with high-level abstractions rather than implementation details
+### Account Types
 
-### Polymorphism
-- Common interface (deposit, withdraw, get_balance) with different implementations
-- Application code can work with any account type through this common interface
+#### Savings Account
 
-## Simulation Design
-The simulation demonstrates how these objects work together in a realistic scenario:
+* Has interest rate (default 0.1%)
+* Allows overdraft with 2% fee
 
-- **Account Creation**: Different account types are instantiated with appropriate parameters
-- **Financial Operations**: Funds are deposited and withdrawn with account-specific rules
-- **Time Simulation**: Interest accrual is simulated over time periods
-- **Boundary Testing**: Special cases like withdrawal limits and negative balances are tested
-- **Reporting**: Tax information is compiled across different account types
+```python
+class SavingAccount(BankAccount):
+    def __init__(self, identifier):
+        super().__init__(identifier)
+        self.__interest_rate = 0.001
+        self.__type = "Savings Account"
+```
 
-## Key Implementation Features
-### Time-Based Interest
-The system simulates the passage of time for interest calculations:
+#### Youth Account
+* For users under 25 years old
+* Higher interest rate (2%)
+* Monthly withdrawal limit of 2000
 
-### Account Type-Specific Behaviors
-- **SavingAccount**: Can go below zero with a 2% charge applied
-- **YouthAccount**: Has age restrictions and monthly withdrawal limits
+```python
+class YouthAccount(BankAccount):
+    def __init__(self, identifier, age):
+        super().__init__(identifier)
+        self.__interest_rate = 0.02
+        self.__withdrawal_limit = 2000
+```
 
-### Account Management
-The BankApplication class demonstrates composition by containing and managing multiple account objects:
+#### Simulation
+The simulation demonstrates:
 
-## Conclusion
-This implementation demonstrates how OOP principles enable the modeling of real-world systems through class hierarchies, encapsulation of behavior, and object relationships. The simulation shows how these classes work together to create a functional banking system with specialized account types and management capabilities.
+1. Creating different account types
+2. Making deposits and withdrawals
+3. Testing special features (withdrawal limits, overdraft)
+4. Applying interest
+5. Generating a tax report
+
+```python
+def run_simulation():
+    bank_app = BankApplication()
+    bank_app.authenticate("user123", "password")
+    
+    # Create accounts
+    bank_app.open_account("savings", "SA001")
+    bank_app.open_account("youth", "YA001", 18)
+    
+    # Deposit money
+    bank_app.select_account("SA001")
+    bank_app.deposit(50000)
+    
+    # Test features
+    bank_app.withdraw(55000)  # Overdraft test
+```
