added links to the md

--- a/P02/P02.md
+++ b/P02/P02.md
@@ -2,6 +2,10 @@
 
 This project implements a simple banking system with different account types and a simulation to demonstrate key features.
 
+[Link to the Simulation/Demo Script](./simulation.py) <br>
+[Link to the Class Files](./class_files) <br>
+[Link to the Script Files](./script_files)
+
 ## Bank Application
 
 The BankApplication class manages accounts and provides banking operations:
