--- a/WAHR/god_pack_poke_praesi.Rmd
+++ b/WAHR/god_pack_poke_praesi.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Analyse einer Pokémon-Karten-Simulation mit God Packs"
-author: "Rossasco, Marco; Jovicic, Vladimir; Blaauw, Raphael"
+author: "Rosasco, Marco; Jovicic, Vladimir; Blaauw, Raphael"
 date: "`r Sys.Date()`"
 output:
   html_document:
